# drone-payload-control

./: $null  .gitignore  .gitmodules
.github/workflows/: build.yml
Documents/: 载荷控制模块设计.md
PX4/patches/: default.px4board
PX4/patches/payload_control_px4/: CMakeLists.txt  Kconfig  payload_control_px4.c
PX4/patches/payload_control_px4/include/: payload_control.h
STM32/PayloadControl/: CMakeLists.txt  README.md  run_payload_control_test.bat
STM32/PayloadControl/examples/: stm32_payload_app.c
STM32/PayloadControl/include/: payload_mavlink_bridge.h
STM32/PayloadControl/src/: payload_control.c  payload_mavlink_bridge.c
STM32/PayloadControl/tests/: test_payload_control.c
